kubernetes-files/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: documentation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: documentation-service
  template:
    metadata:
      name: documentation-service
      labels:
        app: documentation-service
        version: v1
    spec:
      containers:
      - name: documentation-service
        image: REG/IMAGE:TAG
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1.8Gi"
            cpu: "450m"
          limits:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - containerPort: 8080
      serviceAccountName: documentation-service
---
apiVersion: v1
kind: Service
metadata:
  name: documentation-service
  labels:
    app: documentation-service
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
  selector:
    app: documentation-service
