kubernetes-files/istio-rules.yaml
# apiVersion: networking.istio.io/v1beta1
# kind: Gateway
# metadata:
#  name: istio-gateway
# spec:
#  selector:
#    istio: ingressgateway
#  servers:
#    - port:
#        number: 80
#        name: http
#        protocol: HTTP
#      hosts:
#        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: documentation-service-destination
spec:
  host: documentation-service
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: documentation-service-route
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: "/documentation-service/"
      rewrite:
          uri: "/"
      route:
        - destination:
            host: documentation-service
            subset: v1
#      timeout: 0.5s # - to enable if using Istio fault on callme-service route

### jwt auth
---
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: "documentation-service-jwt-auth"
  namespace: default
spec:
  selector:
    matchLabels:
      app: documentation-service
  jwtRules:
    - issuer: "gaian.com"
      jwksUri: "http://a51e319788592492cb52f56574563dad-1719107121.ap-south-1.elb.amazonaws.com/iam-service/.well-known/jwks.json"
      forwardOriginalToken: true

### swagger rule
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  namespace: default
  name: documentation-service-swagger-rules
spec:
  selector:
    matchLabels:
      app: documentation-service
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
    - to:
        - operation:
            methods: ["GET"]

### service rule
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  namespace: default
  name: documentation-service-other-rules
spec:
  selector:
    matchLabels:
      app: documentation-service
  action: ALLOW
  rules:
    - to:
        - operation:
            methods: ["GET","POST","PUT","DELETE"]
      when:
        - key: request.auth.claims[authorities]
          values: ["ROLE_MARKETPLACE_USER"]
      from:
        - source:
            requestPrincipals: ["gaian.com/gaian.com"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  namespace: default
  name: engagements-processor-to-documentation-service-rules
spec:
  selector:
    matchLabels:
      app: documentation-service
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/default/sa/engagements-processor"]
      to:
        - operation:
            methods: ["GET","POST","PUT","DELETE"]
